cmake_minimum_required(VERSION 3.9)
project(zl)

set(CMAKE_CXX_STANDARD 11)
include_directories(ZLMediaKit/src
        ZLMediaKit/ZLToolKit/src )
add_executable(zl
        ZLMediaKit/c_wrapper/src/cleaner.h
        ZLMediaKit/c_wrapper/src/common.cpp
        ZLMediaKit/c_wrapper/src/common.h
        ZLMediaKit/c_wrapper/src/httpdownloader.cpp
        ZLMediaKit/c_wrapper/src/httpdownloader.h
        ZLMediaKit/c_wrapper/src/media.cpp
        ZLMediaKit/c_wrapper/src/media.h
        ZLMediaKit/c_wrapper/src/mediakit.h
        ZLMediaKit/c_wrapper/src/player.cpp
        ZLMediaKit/c_wrapper/src/player.h
        ZLMediaKit/c_wrapper/src/proxyplayer.cpp
        ZLMediaKit/c_wrapper/src/proxyplayer.h
        ZLMediaKit/c_wrapper/tests/test_all.cpp
        ZLMediaKit/src/Codec/AACEncoder.cpp
        ZLMediaKit/src/Codec/AACEncoder.h
        ZLMediaKit/src/Codec/H264Encoder.cpp
        ZLMediaKit/src/Codec/H264Encoder.h
        ZLMediaKit/src/Common/config.cpp
        ZLMediaKit/src/Common/config.h
        ZLMediaKit/src/Common/MediaSender.h
        ZLMediaKit/src/Common/MediaSource.cpp
        ZLMediaKit/src/Common/MediaSource.h
        ZLMediaKit/src/Device/base64.cpp
        ZLMediaKit/src/Device/base64.h
        ZLMediaKit/src/Device/Device.cpp
        ZLMediaKit/src/Device/Device.h
        ZLMediaKit/src/Device/PlayerProxy.cpp
        ZLMediaKit/src/Device/PlayerProxy.h
        ZLMediaKit/src/H264/h264_bit_reader.cpp
        ZLMediaKit/src/H264/h264_bit_reader.h
        ZLMediaKit/src/H264/h264_parser.cpp
        ZLMediaKit/src/H264/h264_parser.h
        ZLMediaKit/src/H264/h264_poc.cpp
        ZLMediaKit/src/H264/h264_poc.h
        ZLMediaKit/src/H264/H264Parser.cpp
        ZLMediaKit/src/H264/H264Parser.h
        ZLMediaKit/src/H264/macros.h
        ZLMediaKit/src/H264/ranges.h
        ZLMediaKit/src/H264/SPSParser.c
        ZLMediaKit/src/H264/SPSParser.h
        ZLMediaKit/src/Http/HttpClient.cpp
        ZLMediaKit/src/Http/HttpClient.h
        ZLMediaKit/src/Http/HttpClientImp.cpp
        ZLMediaKit/src/Http/HttpClientImp.h
        ZLMediaKit/src/Http/HttpDownloader.cpp
        ZLMediaKit/src/Http/HttpDownloader.h
        ZLMediaKit/src/Http/HttpRequester.cpp
        ZLMediaKit/src/Http/HttpRequester.h
        ZLMediaKit/src/Http/HttpSession.cpp
        ZLMediaKit/src/Http/HttpSession.h
        ZLMediaKit/src/Http/HttpsSession.h
        ZLMediaKit/src/Http/strCoding.cpp
        ZLMediaKit/src/Http/strCoding.h
        ZLMediaKit/src/MediaFile/crc32.cpp
        ZLMediaKit/src/MediaFile/crc32.h
        ZLMediaKit/src/MediaFile/HLSMaker.cpp
        ZLMediaKit/src/MediaFile/HLSMaker.h
        ZLMediaKit/src/MediaFile/MediaReader.cpp
        ZLMediaKit/src/MediaFile/MediaReader.h
        ZLMediaKit/src/MediaFile/MediaRecorder.cpp
        ZLMediaKit/src/MediaFile/MediaRecorder.h
        ZLMediaKit/src/MediaFile/Mp4Maker.cpp
        ZLMediaKit/src/MediaFile/Mp4Maker.h
        ZLMediaKit/src/MediaFile/TSMaker.cpp
        ZLMediaKit/src/MediaFile/TSMaker.h
        ZLMediaKit/src/Player/MediaPlayer.cpp
        ZLMediaKit/src/Player/MediaPlayer.h
        ZLMediaKit/src/Player/Player.cpp
        ZLMediaKit/src/Player/Player.h
        ZLMediaKit/src/Player/PlayerBase.cpp
        ZLMediaKit/src/Player/PlayerBase.h
        ZLMediaKit/src/Rtmp/amf.cpp
        ZLMediaKit/src/Rtmp/amf.h
        ZLMediaKit/src/Rtmp/Rtmp.h
        ZLMediaKit/src/Rtmp/RtmpMediaSource.h
        ZLMediaKit/src/Rtmp/RtmpParser.cpp
        ZLMediaKit/src/Rtmp/RtmpParser.h
        ZLMediaKit/src/Rtmp/RtmpPlayer.cpp
        ZLMediaKit/src/Rtmp/RtmpPlayer.h
        ZLMediaKit/src/Rtmp/RtmpPlayerImp.h
        ZLMediaKit/src/Rtmp/RtmpProtocol.cpp
        ZLMediaKit/src/Rtmp/RtmpProtocol.h
        ZLMediaKit/src/Rtmp/RtmpPusher.cpp
        ZLMediaKit/src/Rtmp/RtmpPusher.h
        ZLMediaKit/src/Rtmp/RtmpSession.cpp
        ZLMediaKit/src/Rtmp/RtmpSession.h
        ZLMediaKit/src/Rtmp/RtmpToRtspMediaSource.cpp
        ZLMediaKit/src/Rtmp/RtmpToRtspMediaSource.h
        ZLMediaKit/src/Rtmp/utils.cpp
        ZLMediaKit/src/Rtmp/utils.h
        ZLMediaKit/src/RTP/RtpMaker.h
        ZLMediaKit/src/RTP/RtpMakerAAC.cpp
        ZLMediaKit/src/RTP/RtpMakerAAC.h
        ZLMediaKit/src/RTP/RtpMakerH264.cpp
        ZLMediaKit/src/RTP/RtpMakerH264.h
        ZLMediaKit/src/Rtsp/RtpBroadCaster.cpp
        ZLMediaKit/src/Rtsp/RtpBroadCaster.h
        ZLMediaKit/src/Rtsp/RtpParser.cpp
        ZLMediaKit/src/Rtsp/RtpParser.h
        ZLMediaKit/src/Rtsp/Rtsp.cpp
        ZLMediaKit/src/Rtsp/Rtsp.h
        ZLMediaKit/src/Rtsp/RtspMediaSource.h
        ZLMediaKit/src/Rtsp/RtspPlayer.cpp
        ZLMediaKit/src/Rtsp/RtspPlayer.h
        ZLMediaKit/src/Rtsp/RtspPlayerImp.h
        ZLMediaKit/src/Rtsp/RtspSession.cpp
        ZLMediaKit/src/Rtsp/RtspSession.h
        ZLMediaKit/src/Rtsp/RtspToRtmpMediaSource.cpp
        ZLMediaKit/src/Rtsp/RtspToRtmpMediaSource.h
        ZLMediaKit/src/Rtsp/UDPServer.cpp
        ZLMediaKit/src/Rtsp/UDPServer.h
        ZLMediaKit/src/Shell/ShellCMD.cpp
        ZLMediaKit/src/Shell/ShellSession.cpp
        ZLMediaKit/src/Shell/ShellSession.h
        ZLMediaKit/tests/DeviceHK/DeviceHK.cpp
        ZLMediaKit/tests/DeviceHK/DeviceHK.h
        ZLMediaKit/tests/H264Decoder.h
        ZLMediaKit/tests/test_benchmark.cpp
        ZLMediaKit/tests/test_httpApi.cpp
        ZLMediaKit/tests/test_httpClient.cpp
        ZLMediaKit/tests/test_player.cpp
        ZLMediaKit/tests/test_rtmpPusher.cpp
        ZLMediaKit/tests/test_rtmpPusherMp4.cpp
        ZLMediaKit/tests/test_server.cpp
        ZLMediaKit/tests/YuvDisplayer.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/aes.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/asn1.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/asn1_mac.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/asn1t.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/bio.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/blowfish.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/bn.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/buffer.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/camellia.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/cast.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/cmac.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/cms.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/comp.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/conf.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/conf_api.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/crypto.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/des.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/des_old.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/dh.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/dsa.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/dso.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/dtls1.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/e_os2.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/ebcdic.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/ec.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/ecdh.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/ecdsa.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/engine.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/err.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/evp.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/hmac.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/idea.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/krb5_asn.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/kssl.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/lhash.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/md4.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/md5.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/mdc2.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/modes.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/obj_mac.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/objects.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/ocsp.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/opensslconf.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/opensslv.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/ossl_typ.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/pem.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/pem2.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/pkcs12.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/pkcs7.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/pqueue.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/rand.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/rc2.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/rc4.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/ripemd.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/rsa.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/safestack.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/seed.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/sha.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/srp.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/srtp.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/ssl.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/ssl2.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/ssl23.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/ssl3.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/stack.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/symhacks.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/tls1.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/ts.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/txt_db.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/ui.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/ui_compat.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/whrlpool.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/x509.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/x509_vfy.h
        ZLMediaKit/ZLToolKit/project/ios/openssl/x509v3.h
        ZLMediaKit/ZLToolKit/src/Network/Socket.cpp
        ZLMediaKit/ZLToolKit/src/Network/Socket.h
        ZLMediaKit/ZLToolKit/src/Network/sockutil.cpp
        ZLMediaKit/ZLToolKit/src/Network/sockutil.h
        ZLMediaKit/ZLToolKit/src/Network/TcpClient.cpp
        ZLMediaKit/ZLToolKit/src/Network/TcpClient.h
        ZLMediaKit/ZLToolKit/src/Network/TcpServer.h
        ZLMediaKit/ZLToolKit/src/Network/TcpSession.cpp
        ZLMediaKit/ZLToolKit/src/Network/TcpSession.h
        ZLMediaKit/ZLToolKit/src/Poller/EventPoller.cpp
        ZLMediaKit/ZLToolKit/src/Poller/EventPoller.h
        ZLMediaKit/ZLToolKit/src/Poller/Pipe.cpp
        ZLMediaKit/ZLToolKit/src/Poller/Pipe.h
        ZLMediaKit/ZLToolKit/src/Poller/PipeWrap.cpp
        ZLMediaKit/ZLToolKit/src/Poller/PipeWrap.h
        ZLMediaKit/ZLToolKit/src/Poller/SelectWrap.cpp
        ZLMediaKit/ZLToolKit/src/Poller/SelectWrap.h
        ZLMediaKit/ZLToolKit/src/Poller/Timer.cpp
        ZLMediaKit/ZLToolKit/src/Poller/Timer.h
        ZLMediaKit/ZLToolKit/src/Thread/AsyncTaskThread.cpp
        ZLMediaKit/ZLToolKit/src/Thread/AsyncTaskThread.h
        ZLMediaKit/ZLToolKit/src/Thread/List.h
        ZLMediaKit/ZLToolKit/src/Thread/rwmutex.h
        ZLMediaKit/ZLToolKit/src/Thread/semaphore.h
        ZLMediaKit/ZLToolKit/src/Thread/spin_mutex.h
        ZLMediaKit/ZLToolKit/src/Thread/TaskQueue.h
        ZLMediaKit/ZLToolKit/src/Thread/threadgroup.h
        ZLMediaKit/ZLToolKit/src/Thread/ThreadPool.h
        ZLMediaKit/ZLToolKit/src/Thread/WorkThreadPool.cpp
        ZLMediaKit/ZLToolKit/src/Thread/WorkThreadPool.h
        ZLMediaKit/ZLToolKit/src/Util/CMD.cpp
        ZLMediaKit/ZLToolKit/src/Util/CMD.h
        ZLMediaKit/ZLToolKit/src/Util/File.cpp
        ZLMediaKit/ZLToolKit/src/Util/File.h
        ZLMediaKit/ZLToolKit/src/Util/function_traits.h
        ZLMediaKit/ZLToolKit/src/Util/logger.h
        ZLMediaKit/ZLToolKit/src/Util/MD5.cpp
        ZLMediaKit/ZLToolKit/src/Util/MD5.h
        ZLMediaKit/ZLToolKit/src/Util/mini.h
        ZLMediaKit/ZLToolKit/src/Util/NoticeCenter.h
        ZLMediaKit/ZLToolKit/src/Util/onceToken.h
        ZLMediaKit/ZLToolKit/src/Util/ResourcePool.h
        ZLMediaKit/ZLToolKit/src/Util/RingBuffer.h
        ZLMediaKit/ZLToolKit/src/Util/SqlConnection.h
        ZLMediaKit/ZLToolKit/src/Util/SqlPool.h
        ZLMediaKit/ZLToolKit/src/Util/SSLBox.cpp
        ZLMediaKit/ZLToolKit/src/Util/SSLBox.h
        ZLMediaKit/ZLToolKit/src/Util/TimeTicker.h
        ZLMediaKit/ZLToolKit/src/Util/util.cpp
        ZLMediaKit/ZLToolKit/src/Util/util.h
        ZLMediaKit/ZLToolKit/src/Util/uv_errno.cpp
        ZLMediaKit/ZLToolKit/src/Util/uv_errno.h
        ZLMediaKit/ZLToolKit/src/win32/getopt.c
        ZLMediaKit/ZLToolKit/src/win32/getopt.h
        ZLMediaKit/ZLToolKit/src/win32/tailor.h
        ZLMediaKit/ZLToolKit/tests/test_asyncTaskThrad.cpp
        ZLMediaKit/ZLToolKit/tests/test_eventPoller.cpp
        ZLMediaKit/ZLToolKit/tests/test_logger.cpp
        ZLMediaKit/ZLToolKit/tests/test_noticeCenter.cpp
        ZLMediaKit/ZLToolKit/tests/test_pipe.cpp
        ZLMediaKit/ZLToolKit/tests/test_resourcePool.cpp
        ZLMediaKit/ZLToolKit/tests/test_ringBuffer.cpp
        ZLMediaKit/ZLToolKit/tests/test_rwmutex.cpp
        ZLMediaKit/ZLToolKit/tests/test_semaphore.cpp
        ZLMediaKit/ZLToolKit/tests/test_shell.cpp
        ZLMediaKit/ZLToolKit/tests/test_spin_mutex.cpp
        ZLMediaKit/ZLToolKit/tests/test_sql.cpp
        ZLMediaKit/ZLToolKit/tests/test_ssl.cpp
        ZLMediaKit/ZLToolKit/tests/test_tcpClient.cpp
        ZLMediaKit/ZLToolKit/tests/test_tcpEchoServer.cpp
        ZLMediaKit/ZLToolKit/tests/test_threadPool.cpp
        ZLMediaKit/ZLToolKit/tests/test_threadPoolBenchmark.cpp
        ZLMediaKit/ZLToolKit/tests/test_udpSock.cpp)
